# ShogiGUI

./: privacyPolicy.txt  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/shogigui/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/tksoft/shogigui/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/YaneuraOu/: misc.cpp  misc.h
app/src/main/java/com/example/shogigui/: KifuNode.kt  KifuUtils.kt  MainActivity.kt  ShogiBoard.kt  ShogiUIComponents.kt  UsiEngine.kt
app/src/main/java/com/example/shogigui/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/tksoft/shogigui/: KifuNode.kt  KifuUtils.kt  MainActivity.kt  ShogiBoard.kt  ShogiUIComponents.kt  UsiEngine.kt
app/src/main/java/com/tksoft/shogigui/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: network_intelligence_24px.xml  rotate_right_24px.xml  stop_circle_24px.xml  undo_24px.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/shogigui/: ExampleUnitTest.kt
app/src/test/java/com/tksoft/shogigui/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
icon/: SG_icon_1.afdesign
